--- a/index.html
+++ b/index.html
@@ -1,1 +1,58 @@
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <title>Ali Aheed Quadri</title>
+</head>
+<body>
 
+   <!-- <img src='https://i.pinimg.com/236x/5e/9c/06/5e9c06a6b69a3b4518038c030466e3e3--carolina-blue-carolina-girls.jpg?b=t' alt='unc mascot'>-->
+    <img src="https://i.pinimg.com/236x/5e/9c/06/5e9c06a6b69a3b4518038c030466e3e3--carolina-blue-carolina-girls.jpg?b=t" alt="Smiley face" width="5" height="5">
+
+    <p>paragrddddddddddddddddddddddddddph 1 <br />
+        paragraph 1 continued <br />
+        <br />
+    </p>
+    <p>paragraph 2 <br />
+        paragraph 2 continued
+    </p>
+        <br />
+
+        <ul>
+                <li><a href="http://html5doctor.com/" target="_blank">HTML5 Doctor</a></li>
+                <li><a href="https://developer.mozilla.org/en-US/" target="_blank">Mozilla Developer Network</a></li>
+                <li><a href="https://css-tricks.com/" target="_blank">CSS Tricks</a></li>
+              </ul>
+
+    <table border = "1">
+        <thead><th colspan="4">Regional Sales Q1</th>
+        </thead>
+
+        <thead>
+        <th>movie</th>
+        <th>songs</th>
+        <th>book</th>
+        <th>activity</th>
+    </thead>
+    <tbody>
+        <tr>
+            <td>North-West</td>
+            <td>Tim</td>
+            <td>$3000</td>
+            <td>$24,700</td>
+        </tr>
+        <tr>
+                <td>North-West</td>
+                <td>Tim</td>
+                <td>$3000</td>
+                <td>$24,700</td>
+            </tr>
+                                                                                                                                                
+    </tbody>
+    <!--<tbody><tfoot><tr><td colspan="4" align="center">1 employee sales by region</td></tr></tfoot>-->
+    
+    </tbody>
+
+    </table>    
+</body>
+</html>
